--- a/html-css/Module05/css/style.css
+++ b/html-css/Module05/css/style.css
@@ -2,7 +2,7 @@
     margin: 0px;
     padding: 0px; 
 }
-body {
+main {
     width: 1600px;
     height: 1455px;
 }
@@ -62,6 +62,8 @@ a {
 main {
     background: #e9f0fd;
 }
+
+
 .fon {
     width: 1600px;
     height: 600px;
@@ -109,18 +111,19 @@ main {
     width: 1600px;
     height: 600px;
     position: absolute;
-    top: 107px;
+    top: 100px;
     left: 0px;
     opacity: 0.5;
 }
+
 .head {
     font-size: 48px;
     font-family: Roboto;
     font-weight: 800;
     text-transform: uppercase;
     text-align: center;
-    color: #515151;
-    margin-top: 100px;
+    color: #515151; 
+    margin-top: 100px;   
 }
 .head::after {
     content: " ";
@@ -144,6 +147,7 @@ main {
 .shop-item:not(:nth-of-type(4n+4)) {
     margin-right: 25px;
 }
+
 
 .price {
     width: 55px;
@@ -259,6 +263,9 @@ img {
 }
 button:hover {
     background-color: #1abc9c;
+}
+.shops{
+    margin-bottom: 100px;
 }
 
 .footer {
