--- a/html-css/Module06/css/style.css
+++ b/html-css/Module06/css/style.css
@@ -41,20 +41,31 @@ a {
     color: #b0e9de;
     text-transform: uppercase;
     text-decoration: none;
-    
+    position: relative;
+    display: inline-block;
 }
 a:hover {
     color: #f38181;
    
 }
-a:hover::after {
+a::after {
     content: "";
     background: #f38181;
     height: 3px;
     width: 50px;
     display: block;
     margin: 0 auto;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0px;
 }
+a:hover::after {
+    visibility: visible;
+    opacity: 1;
+    transform: translateY(10px);
+    }
+
 
 .info {
     font-family: Kaushan Script;
