--- a/html-css/Module08/css/style.css
+++ b/html-css/Module08/css/style.css
@@ -6,6 +6,8 @@
 .container {
     margin: 0 auto;
     text-align: center;
+    max-width: 1440px;
+    min-width: 320px;
     height: 540px;
     background: #1a1915;
     opacity: 0.9;
@@ -69,7 +71,6 @@ a:hover {
     border-radius: 15px;
 }
 
-
 /*main*/
 h1 {
     margin-top: 46px;
@@ -82,8 +83,7 @@ h1 {
 }
 .person {
     text-align: center; 
-    width: 220px;
-    height: 245px;  
+    width: 220px;  
 }
 .face {
     margin-bottom: 20px;
@@ -132,7 +132,7 @@ h4 {
     line-height: 39px;
     text-align: center;
     background: none;
-    border: none;
+    border: 2px solid transparent;
  }
  .foot:hover{
     border: 2px solid #ff4e50;    
