--- a/html-css/Module10/css/style.css
+++ b/html-css/Module10/css/style.css
@@ -143,7 +143,7 @@ li {
 .nav-menu__link:hover {
     color: #fce38a;   
 }
-.nav-menu__link::after {
+.line::after{
     content: "";
     background: #fce38a;
     height: 3px;
@@ -160,7 +160,7 @@ li {
     -o-transition: .2s linear;
     transition: .2s linear;
 }
-.nav-menu__link:hover::after {
+.line:hover::after {
     visibility: visible;
     opacity: 1;
     -webkit-transform: translateY(10px);
@@ -172,6 +172,9 @@ li {
 
 .main-container{
     width: 1918px;    
+}
+.main-container {
+    width: 100%;
 }
 .article{
     width: 1190px;
@@ -220,8 +223,8 @@ li {
     text-align: left;
 }
 .section {
-    height: 170px;
     width: 380px;
+    margin-bottom: 40px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -233,7 +236,7 @@ li {
 .box-icon svg {
     display: block;
     width: 32px;
-    height: 100%;
+    height: 32px;
     padding: 0 20px;
     fill: #95e1d3;
 }
