--- a/JS/Module12/src/css/style.css
+++ b/JS/Module12/src/css/style.css
@@ -2,9 +2,9 @@ body {
     font-family: 'Roboto', sans-serif;
     width: 400px;
     margin: 0 auto;
-  }
+}
 
-.node{
+.note{
     display: flex;
     flex-direction: row;
     justify-content: center;
